Add development environment, documentation, and project structure updates
- Added Docker configuration and dev container setup
- Enhanced project documentation (DATA-SCHEMA.md, DEMOS.md)
- Updated frontend dependencies and styling
- Added community files (CODE_OF_CONDUCT.md, CONTRIBUTING.md, LICENSE)
- Note: docs/media/ contains placeholder screenshots that need real captures before external sharing

--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@testing-library/jest-dom": "^6.4.8",
+    "@eslint/eslintrc": "^3.1.0",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
@@ -25,9 +26,12 @@
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "jsdom": "^24.0.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
