Major Release: Enhanced ASR Copilot with Automation, UI Components, and Project Management
🚀 New Features & Capabilities:
- Added automation framework (backend/routes/automation.py, services/automation.py)
- Enhanced adapter system with status monitoring (services/adapter_status.py)
- New frontend UI components: AdaptersPanel, EmptyStateTiles, ShortcutsModal, ToastBar
- Cross-platform demo script (run_demo.ps1 for Windows compatibility)

🏗️ Project Management & Community:
- GitHub issue and PR templates for better collaboration
- CODEOWNERS file for automated code review assignment
- Enhanced Makefile and compose.yaml for better development workflow
- Comprehensive WHY.md explaining project rationale and decisions

🧪 Testing & Quality:
- New test suites: test_automation.py and test_settings.py
- Enhanced existing test coverage across the application

📚 Documentation Expansion:
- DEMO-SCRIPT.md: Step-by-step demonstration guide
- EVM-PRIMER.md: Earned Value Management fundamentals
- EXTENDING.md: Guidelines for project extension and customization
- ROADMAP.md: Future development direction and milestones
- Enhanced CHANGELOG.md with detailed release notes
- New docs/SCREENSHOTS/ directory for visual documentation

🔧 Core Improvements:
- Backend: Enhanced adapters, configuration, and service layers
- Frontend: Improved styling, API client, and component architecture
- Dev Environment: Updated container configuration for better DX

This release significantly expands the ASR Copilot's capabilities for enterprise adoption!

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,31 @@
 {
   "name": "ASR Copilot",
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "postCreateCommand": "pip install -r requirements.txt && cd app/frontend && npm install",
+  "image": "mcr.microsoft.com/devcontainers/python:3.11",
+  "features": {
+    "ghcr.io/devcontainers/features/node:1": {
+      "version": "18"
+    }
+  },
+  "forwardPorts": [5173, 8000],
+  "postCreateCommand": "bash -lc 'python -m venv .venv && source .venv/bin/activate && pip install -r requirements.txt && cd app/frontend && npm install'",
+  "postStartCommand": "bash -lc 'source .venv/bin/activate && python -m app.scripts.seed_data'",
   "customizations": {
     "vscode": {
+      "settings": {
+        "python.defaultInterpreterPath": "${containerWorkspaceFolder}/.venv/bin/python",
+        "editor.formatOnSave": true,
+        "eslint.workingDirectories": ["./app/frontend"],
+        "files.watcherExclude": {
+          "**/.venv/**": true,
+          "**/node_modules/**": true
+        }
+      },
       "extensions": [
         "ms-python.python",
         "ms-python.vscode-pylance",
         "esbenp.prettier-vscode",
-        "dbaeumer.vscode-eslint",
-        "ms-azuretools.vscode-docker"
+        "dbaeumer.vscode-eslint"
       ]
-    }
-  },
-  "portsAttributes": {
-    "8000": {
-      "label": "FastAPI"
-    },
-    "5173": {
-      "label": "ASR Frontend"
     }
   }
 }
