--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: ci
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  build-test:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -21,17 +21,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install ruff black
-
-      - name: Backend lint
-        run: |
-          ruff check app --exit-zero
-          black --check app
 
       - name: Backend tests
-        run: |
-          pytest
-          python app/scripts/ci_export_smoke.py
+        run: pytest
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -42,35 +34,8 @@ jobs:
 
       - name: Install frontend dependencies
         working-directory: app/frontend
-        run: npm install
+        run: npm ci
 
-      - name: Frontend lint
+      - name: Frontend build
         working-directory: app/frontend
-        run: npm run lint
-
-      - name: Frontend tests
-        working-directory: app/frontend
-        run: npm run test -- --run
-
-  codeql:
-    runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-    strategy:
-      fail-fast: false
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: python,javascript
-
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+        run: npm run build
