--- a/.github/workflows/media-refresh.yml
+++ b/.github/workflows/media-refresh.yml
@@ -8,10 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
           python-version: '3.11'
 
@@ -23,16 +23,16 @@ jobs:
           python -m playwright install --with-deps chromium
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
           cache-dependency-path: app/frontend/package-lock.json
 
       - name: Install frontend dependencies & build
         working-directory: app/frontend
         run: |
-          npm install
+          npm ci
           npm run build
 
       - name: Generate screenshots
