--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-fastapi==0.103.2
-uvicorn[standard]==0.23.2
-pydantic==1.10.18
+fastapi==0.118.2
+uvicorn[standard]==0.32.1
+pydantic==2.12.0
+pydantic-settings==2.6.0
 python-multipart==0.0.6
-matplotlib==3.8.0
-jinja2==3.1.2
-httpx==0.25.0
+matplotlib==3.9.2
+jinja2==3.1.6
+httpx==0.28.1
 pytz==2023.3
-numpy==1.26.0
+numpy==2.3.3
 
 # Dev
-pytest==7.4.2
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
+pytest==8.3.3
+pytest-asyncio==0.23.7
+pytest-cov==7.0.0
 aiofiles==23.2.1
 ruff==0.0.287
 genbadge[coverage]==1.1.2
